--- a/AwesomeSeries/AwesomeSeries/AwesomeSeries/Views/DetailView.xaml
+++ b/AwesomeSeries/AwesomeSeries/AwesomeSeries/Views/DetailView.xaml
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             Title="{Binding Title}"
              x:Class="AwesomeSeries.Views.DetailView">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout 
+                            VerticalOptions="Center"
+                            HorizontalOptions="Center">
+            <Image Source="{Binding Poster}"/>
+            <StackLayout Padding="15,15,15,15">
+                <Label Text="{Binding Name}" FontSize="Medium" />
+                <Label Text="{Binding Overview}" FontSize="Small" />
+                
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
